# TG_excur_bot

./: .env  BUTTON_.py  Markup_Button.py  README.md  READMY.md  config.py  database.db  db.py  main.py  pyproject.toml  requirements.txt  users.json
Anti_flood/: __init__.py  middlewares.py
Config/: _Config_.py
Delete_Msg/: DelMsg.py
KeyboardMarkup/: KeyboardMarkup.py  __init__.py
TOKEN_BOT/: TOKEN.py
city/astrahan/: data_text.py
city/krim/: data_text.py
database/: db.py
excur/: __init__.py  data_text.py
excur/excur_in_krim_beach/: text_10.txt  text_12.txt  text_16.txt  text_17.txt  text_18.txt  text_2.txt  text_20.txt  text_25.txt  text_27.txt  text_28.txt  text_3.txt  text_30.txt  text_32.txt  text_33.txt  text_4.txt  text_5.txt  text_7.txt
handlers/: __init__.py  admin.py  client.py  excur.py  filter.py  guide_gpt.py  list_cities.py  list_excur.py  payment.py
lists_dictionaries/: __init__.py  check_excur_lists.py  city_lists.py  excur_lists.py
maintxt/: admin_help.txt  gptsystem.txt  help.txt  time.txt
resources/maintxt/: admin_hello.txt  hello.txt  parting.txt
src/: __main__.py  print_colorama.py
src/api/client/: routers.py  schemas.py  utils.py
src/bot/client/: __init__.py  handlers.py  keyboards.py  tools.py
src/config/: __init__.py  config.py
src/db/: database.py  models.py
src/utils/: __init__.py  chat_type.py  read_txt.py  startup_shutdown.py
states/: states.py
tests/: tests.py
txt_read/: __init__.py  read_txt.py
volgograd/: data_text.py
web/static/: asset-manifest.json  manifest.json
web/templates/: index.html
(+26 files in other folders)
